document 2 count of grammar mistakes vector added